examples/type_system/failing/177_module_missing_open_brace.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

module Demo
let x = 1
let after = 1
